Build modification, fixing bugs